--- a/index.html
+++ b/index.html
@@ -5,4 +5,6 @@
 	<li style="color:green;">CSS</li>
 	<li style="color:blue;">JavaScript</li>
 	<p>Novi paragraf</p>
+	<p>Drugi paragraf</p>
+	
 </ul>
